--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "bufferutil": "3.0.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.16.4",
     "express-jwt": "^5.3.0",
     "express-session": "^1.14.2",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.2",
     "morgan": "~1.6.1",
@@ -26,7 +25,7 @@
     "pg": "^6.1.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.27.0",
-    "serve-favicon": "~2.3.0",
+    "serve-favicon": "^2.5.0",
     "utf-8-validate": "4.0.2",
     "ws": "5.2.0"
   },
